Add yarn to build too

--- a/.github/workflows/docs_deploy.yml
+++ b/.github/workflows/docs_deploy.yml
@@ -30,12 +30,18 @@ jobs:
           node-version: 20
           cache: npm
 
+      - name: Install Yarn
+        uses: actions/toolchain@v2
+        with:
+          toolchain: node@20.x
+          additional-tools: yarn
+
       - name: Install dependencies
         run: npm ci
 
       - name: Build with VitePress
         run: |
-          npm run docs:build
+          yarn docs:build
           touch docs/.vitepress/dist/.nojekyll
 
       - name: Upload artifact
