only build docs on branches, not tags

--- a/.github/workflows/docs_deploy.yml
+++ b/.github/workflows/docs_deploy.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
       - 'v*'
-    tags:
-      - 'v*'
+    #tags:
+    #  - 'v*'
     paths:
       - 'docs/**'
   pull_request:
