Try find the lockfile

--- a/.github/workflows/docs_deploy.yml
+++ b/.github/workflows/docs_deploy.yml
@@ -32,8 +32,7 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        working-directory: ./docs
-        run: yarn install --frozen-lockfile
+        run: yarn install --frozen-lockfile --cwd ./docs
 
       - name: Build with VitePress
         working-directory: ./docs
