--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -268,6 +268,10 @@ jobs:
       matrix:
         container_name: [ubuntu-22.04, ubuntu-24.04]
     steps:
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          android: 'false'
       - uses: actions/checkout@v4
         with:
           submodules: recursive
