--- a/docker/Dockerfile.dockcross-linux-arm64-lts-custom
+++ b/docker/Dockerfile.dockcross-linux-arm64-lts-custom
@@ -1,4 +1,4 @@
-FROM dockcross/linux-arm64-lts
+FROM dockcross/linux-arm64-lts:20250311-4bd0eec
 
 ENV DEFAULT_DOCKCROSS_IMAGE mavsdk/mavsdk-dockcross-linux-arm64-lts-custom
 
