--- a/docker/Dockerfile.dockcross-linux-armv7-custom
+++ b/docker/Dockerfile.dockcross-linux-armv7-custom
@@ -1,4 +1,4 @@
-FROM dockcross/linux-armv7
+FROM dockcross/linux-armv7:20250311-4bd0eec
 
 ENV DEFAULT_DOCKCROSS_IMAGE mavsdk/mavsdk-dockcross-linux-armv7-custom
 
