--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,20 @@ HunterGate(
 
 project(mavsdk_superbuild)
 
+# FIXME: in the future we need to mark library methods that need to be visible manually
+#        and remove CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS.
+#        At the moment, we are running into the 65535 object limit on Windows likely because of this.
+message(STATUS "BUILD_SHARED_LIBS: ${BUILD_SHARED_LIBS}")
+message(STATUS "MSVC: ${MSVC}")
+message(STATUS "BUILD_MAVSDK_SERVER: ${BUILD_MAVSDK_SERVER}")
+if (BUILD_SHARED_LIBS AND MSVC AND BUILD_MAVSDK_SERVER)
+    message(FATAL_ERROR
+        "To build mavsdk_server on Windows, you need to use BUILD_SHARED_LIBS=OFF.\n"
+        "This avoids the Windows 65535 object limit when statically linking all dependencies.\n"
+        "Use: cmake -DBUILD_SHARED_LIBS=OFF ..."
+    )
+endif()
+
 if (BUILD_BACKEND)
     message(FATAL_ERROR "The argument BUILD_BACKEND has been replaced by BUILD_MAVSDK_SERVER. To build mavsdk_server, use -DBUILD_MAVSDK_SERVER=ON.")
 endif()
